# dbt_hypermarche

./: .gitignore  .pre-commit-config.yaml  .sqlfluff  .sqruff  README.md  catalog.json  dbt_project.yml  graph.gpickle  graph_summary.json  manifest.json  partial_parse.msgpack  profiles.yml  pyproject.toml  run_results.json
.github/workflows/: deploy-docs.yml
data_tests/: assert_dim_produit_doublon_nom.sql
dbt/: .sqlfluff  .user.yml  dbt_project.yml  profiles.yml
dbt/macros/: generate_schema_name.sql
dbt/models/: dashboard.yml  overview.md  src_hypermarche.yml
dbt/models/dtm/: _models_dtm.yml  dim_client.sql  dim_produit.sql  dim_ville.sql  fct_commande.sql  fct_commande_has_produit.sql
dbt/models/stg/: _models_stg.yml  stg_commande.sql  stg_retour_commande.sql  stg_zone_has_responsable.sql
dbt/tests/: assert_dim_produit_doublon_nom.sql
faker/: achats.csv  achats.parquet  clients.parquet  generate_fake_data.py  produits.parquet
input/: 0. raw_import.sql  1. staging.sql  2. dtm_dim.sql  3. dtm_fait.sql  Hypermarche.xlsx  achats.csv  desktop.ini  personnes.csv  retours.csv
macros/: generate_schema_name.sql  refresh_tableau.sql
models/: dashboards.yml  src_hypermarche.yml
models/dtm/: dim_client.sql  dim_produit.sql  dim_ville.sql  fct_commande.sql  fct_commande_has_produit.sql  schema_faits.yml
models/raw/: raw_achats.sql  raw_personnes.sql  raw_retours.sql
models/src/: src_hypermarche.yml
models/stg/: stg_commande.sql  stg_retour_commande.sql  stg_zone_has_responsable.sql
seeds/: achats.csv  personnes.csv  retours.csv
(+8 files in other folders)
